# lotus

./: .gitignore  Cargo.toml  README.md  outputusers.parquet  start_server.sh
lotus_scrape/: Cargo.toml
lotus_scrape/src/: lib.rs  main.rs  scraper.rs
lotus_scrape/src/scraper/: scrape_writer.rs  scraper_types.rs
lotus_web/: Cargo.toml  notes.md
lotus_web/benches/: create_recommender.rs  get_recommendations.rs
lotus_web/files/: script.js  style.css  tags.json  usernames.json
lotus_web/src/: lib.rs  main.rs  recommender.rs  server.rs
lotus_web/src/recommender/: recommender_types.rs
lotus_web/templates/: index.html
lotus_web/web_files/: script.js  style.css
output/: articles.parquet  tags.parquet  users.parquet
src/: console.rs  lib.rs  lotus_core.rs  lotus_scrape.rs  lotus_web.rs  main.rs  recommender.rs  scraper.rs  server.rs
src/recommender/: recommender_types.rs
src/scraper/: scrape_writer.rs  scraper_types.rs
templates/: index.html
web/: index.html  style.css
