[package]
name = "lotus_scrape"
version = "0.3.0"
edition = "2021"
authors = ["William Patmore <wapatmore@gmail.com>"]

[dependencies]
arrow-array = "52.1.0"
arrow-schema = "52.1.0"
const_format = "0.2.32"
http = "1.1.0"
lazy_static = "1.5.0"
lotus = { path = "../" }
parking_lot = "0.12.3"
parquet = "52.1.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
