[package]
name = "lotus_scrape"
version = "0.3.0"
edition = "2021"
authors = ["William Patmore <wapatmore@gmail.com>"]

[dependencies]
arrow-array = "53.0.0"
arrow-schema = "53.0.0"
const_format = "0.2.33"
http = "1.1.0"
lazy_static = "1.5.0"
lotus = { path = "../" }
parquet = "53.0.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
