[package]
name = "lotus_web"
version = "0.2.0"
edition = "2021"
authors = ["William Patmore <wapatmore@gmail.com>"]

[dependencies]
arrow-array = "52.1.0"
arrow-schema = "52.1.0"
const_format = "0.2.32"
csv = "1.3.0"
http = "1.1.0"
itertools = "0.13.0"
parking_lot = "0.12.3"
parquet = "52.1.0"
polars = { version = "0.41.3", features = ["parquet", "dtype-u16", "dtype-i8", "ndarray"] }
polars-lazy = { version = "0.41.3", features = ["parquet", "pivot", "dtype-u16", "dtype-i8", "dtype-struct", "is_in"] }
polars-core = { version = "0.41.3", features = ["dot_product"] }
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
axum = "0.7.5"
tokio = { version = "1.39.3", features = ["full"] }
lazy_static = "1.5.0"
serde_json = "1.0.127"
urlencoding = "2.1.3"
askama_axum = "0.4.0"
askama = "0.12.1"
lotus = { path = "../" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
