[package]
name = "lotus_web"
version = "0.3.0"
edition = "2021"
authors = ["William Patmore <wapatmore@gmail.com>"]

[dependencies]
axum = "0.7.5"
askama = "0.12.1"
askama_axum = "0.4.0"
lazy_static = "1.5.0"
lotus = { path = "../" }
parquet = "52.1.0"
polars = { version = "0.41.3", features = ["parquet", "dtype-u16", "dtype-i8", "ndarray", "nightly", "performant", "cse"] }
polars-core = { version = "0.41.3", features = ["dot_product"] }
polars-lazy = { version = "0.41.3", features = ["parquet", "pivot", "dtype-u16", "dtype-i8", "dtype-struct", "is_in"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"]}
urlencoding = "2.1.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
const_format = "0.2.32"

[[bench]]
name = "create_recommender"
harness = false

[[bench]]
name = "get_recommendations"
harness = false
